<?xml version="1.0"?>
<package format="2">
  <name>raspicam_node</name>
  <version>0.1.0</version>
  <description>Package to access the Raspberry Pi Camera from ROS.</description>

  <maintainer email="ra@ubiquityrobotics.com">Rohan Agrawal</maintainer>
  <maintainer email="wayne@gramlich.net">Wayne Gramlich</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>compressed_image_transport</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>camera_info_manager</depend>

  <export>
  </export>
</package>
