<?xml version="1.0"?>
<package format="2">
  <name>raspicam_node</name>
  <version>0.2.2</version>
  <description>Package to access the Raspberry Pi Camera from ROS.</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <maintainer email="wayne@gramlich.net">Wayne Gramlich</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>compressed_image_transport</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libraspberrypi0</depend>
  <build_depend>libraspberrypi-dev</build_depend>

  <export>
  </export>
</package>
